[tool.poetry]
name = "campaign-assessment"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
poethepoet = "^0.31.0"
certifi = "^2024.8.30"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
detect-secrets = "^1.5.0"
black = "^24.10.0"
pylint = "^3.3.1"
ruff = "^0.8.0"
yamllint = "^1.35.1"
sqlfluff = "^3.2.5"
isort = "^5.13.2"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[tool.poe.tasks]
test = "python -m pytest --cov=. --cov-report term-missing"
